# atometa

./: .gitignore  CMakeLists.txt  COLLABORATION.md  CONTRIBUTING.md  CONTRIBUTORS.md  GITHUB.md  NINJA_IMGUI.md  PULL_REQUEST_TEMPLATE.md  README.md  TESTING.md  atometa.cp314-win_amd64.pyd  git-commits.sh  pyproject.toml  test.py  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml
assets/models/: WaterMolecule3D.jsx
assets/molecules/: methane.xyz  water.xyz
docs/tutorials/: PHASE2_CHEMISTRY.md  PHASE3_SIMULATION.md  PHASE4_ADVANCED.md  PROJECT_SUMMARY.md  RENDERING_INTEGRATION.md
include/Atometa/: Common.h
include/Atometa/Chemistry/: Atom.h  Bond.h  MolecularFileIO.h  Molecule.h  PeriodicTable.h
include/Atometa/Core/: Application.h  Core.h  Input.h  Logger.h  Window.h
include/Atometa/GPU/: GPUAccelerator.h
include/Atometa/Network/: NetworkLayer.h
include/Atometa/Physics/: CollisionSystem.h  EnergyMinimizer.h  ForceField.h  MolecularDynamics.h
include/Atometa/Renderer/: AdvancedRenderer.h  Buffer.h  Camera.h  Mesh.h  ModelLoader.h  Renderer.h  Shader.h  VertexArray.h
include/Atometa/Scene/: MedicalModel.h  Scene.h
include/Atometa/UI/: ImGuiLayer.h
src/: Atometa.rc  main.cpp  resource.h
src/chemistry/: Atom.cpp  Bond.cpp  MolecularFileIO.cpp  Molecule.cpp  PeriodicTable.cpp
src/core/: Application.cpp  Input.cpp
src/network/: NetworkLayer.cpp
src/physics/: CollisionSystem.cpp  EnergyMinimizer.cpp  ForceField.cpp  MolecularDynamics.cpp
src/renderer/: Buffer.cpp  Camera.cpp  Mesh.cpp  ModelLoader.cpp  Renderer.cpp  Shader.cpp  VertexArray.cpp
src/scene/: MedicalModel.cpp  Scene.cpp
src/ui/: ImGuiLayer.cpp
tests/: CMakeLists.txt  TestMain.cpp
tests/core/: ApplicationTest.cpp  CoreTest.cpp  LoggerTest.cpp
tests/renderer/: BufferTest.cpp  CameraTest.cpp  MeshTest.cpp  ShaderTest.cpp
